# zkDID

./: Cargo.toml  LICENSE  README.md  ca.tmp.1  ca.tmp.2  ca.tmp.3  committee.tmp.1  committee.tmp.5  tcm2.tmp.3  user.tmp
circuits/: app_key_constraints.json  check_point.circom  check_point.r1cs  check_point.sym  check_point_constraints.json  circuit2.circom  circuit2.r1cs  circuit2.sym  cmp.circom  key_derive.circom  key_derive0.circom  key_derive1.circom  key_derive_constraints.json  merkle_tree.circom  merkle_tree2.circom  pedersen_commit.circom  perdesen_commit.circom  pseudonym_check.circom  sybil_check.circom  sybil_check.r1cs  tpke_dual.circom  tpke_dual.r1cs  tpke_dual_2.circom  tpke_dual_2.r1cs  tpke_single.circom  tpke_single.r1cs  tpke_single.sym  tpke_single.wasm
circuits/check_point_js/: check_point.wasm
circuits/circomlib/: binsub.circom  poseidon.circom
circuits/circuit2_js/: circuit2.wasm
circuits/ecdsa/: ecdsa.circom
circuits/key_derive_js/: key_derive.wasm
circuits/merkle_tree2_js/: merkle_tree2.wasm
contracts/: gas_test.sol  manager.3sol  manager.json  manager.sol  manager0.sol  manager_general.sol  manager_optimize.sol
data/: app_param.json  pedersen_param.json  register_param.json  tca.tmp.2  tcm1.tmp.1  tcm2.tmp.1  test_ca.bak.1  test_ca.bak.3  test_cm.bak.5  test_cm.s1  test_cm1.s1  test_cm1.s2  test_cm1.s3  test_cm2.p2
src/: bench.rs  ca_client.rs  committee_client.rs  lib.rs  main.rs  merkle_tree.rs  tpke.rs  user_client.rs
tests/: contract.rs  credential_request.rs  serde.rs  solidity.rs  verifier_artifact.json
(+7 files in other folders)
