[package]
name = "apdid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baby-jub = { git = "https://github.com/kilb/babyjubjub-rs", rev="2245ce2" }
num-bigint = {version = "0.4", features = ["rand", "serde"]}
rand = "0.8.5"
ark-circom = { git = "https://github.com/kilb/ark-circom.git", features = ["circom-2"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.3.0", default-features = false }
ark-bn254 = { version = "0.3.0" }
color-eyre = "0.5"
lazy_static = "1.4.0"
libsecp256k1 = "0.7.1"
serde = { version = "1.0.151", features = [ "derive" ] }
serde_json = "1.0.91"
postcard = { version = "1.0.2", features = ["use-std"] }
tokio = { version = "1.23.0", features = ["macros"] }
ethers = { version = "1.0.2", features = ["abigen"] }
eyre = "0.6.8"
num-traits = "0.2.8"